src/apps/services/ai/open-webui/k8s/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: open-webui
  namespace: open-webui
spec:
  parentRefs:
    - name: internal
      namespace: gateway
  hostnames:
    - open-webui.internal
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: open-webui
          port: 80
